--- a/p-synopis.html
+++ b/p-synopis.html
@@ -23,6 +23,7 @@
 
 <body id="P-synopsis">
  <div class="Psynopsis-page">
+<!--
    <nav class="top-Pnav">
      <ul>
      <li><a>HOME</a></li>
@@ -35,7 +36,8 @@
      
     </ul>
    </nav>
-   <div class="bread-cube"><a>HOME</a> < SYNOPSIS</div>
+-->
+   <div class="bread-cube"><a>HOME</a>&nbsp;&lt;&nbsp;SYNOPSIS</div>
   <h4 class="subtitle">Synopsis</h4>
   <p>‘In an escalating battle of two minds, a reclusive programmer is plunged into a terrifying, mind-bending revelation as he becomes exposed to the social engineering of his own sentient supercomputer.’</p>
 </div>
