--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           <ul>
           <div class="responseP-menu">
            <li><a href="p-synopis.html">SYNOPSIS</a></li>
-           <li><a>FILMMAKER BIO</a></li>
-           <li><a>CAST & CREW</a></li>
-           <li><a>FILM STILLS</a></li>
-           <li class="mail"><a>CONTACT</a></li>
+           <li><a href="p-filmmakerbio.html">FILMMAKER BIO</a></li>
+           <li><a href="p-cast-crew.html">CAST & CREW</a></li>
+           <li><a href="p-filmstills.html">FILM STILLS</a></li>
+           <li class="mail"><a href="p-contact.html">CONTACT</a></li>
           </div>
 
          
@@ -331,11 +331,11 @@
     }); 
 }); 
   
-     lightbox.option({
-      'resizeDuration': 200,
-      'wrapAround': true,
-   
-    })   
+//     lightbox.option({
+//      'resizeDuration': 200,
+//      'wrapAround': true,
+//   
+//    })   
 
 
     
