--- a/p-cast-crew.html
+++ b/p-cast-crew.html
@@ -7,7 +7,7 @@
 <meta charset="UTF-8">
 
 
-<title>SYNOPSIS</title>
+<title>FILMMEKER&nbsp;BIO</title>
 <link rel="stylesheet" href="CSS/reset.css">
 <!--　lightbox css　--> 
 <link rel="stylesheet" href="CSS/lightbox.css">
@@ -24,8 +24,8 @@
   
 </head>
 
-<body id="P-synopsis">
- <div class="Psynopsis-page">
+<body id="P-cast_and_crew">
+ <div class="Pcast_and_crew-page">
    
    
    <!-- ハンバーガーメニュー -->
@@ -45,9 +45,41 @@
    
    
 
-   <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;SYNOPSIS</div>
-  <h4 class="subtitle">Synopsis</h4>
-  <p>‘In an escalating battle of two minds, a reclusive programmer is plunged into a terrifying, mind-bending revelation as he becomes exposed to the social engineering of his own sentient supercomputer.’</p>
+   <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;CAST&CREW</div>
+   <h4 class="subtitle">Cast and Crew</h4>
+              <section>
+                 <img src="images/Director - Ryan Braund.png" width="150" height="180" alt="">
+                 <p>Written, directed and animated by Ryan Braund</p>
+              </section>
+              <section>
+                <img src="images/Nick Eriksen.jpg" width="150" height="180" alt="">
+                <p>Nick Eriksen as ‘David’</p>
+              </section>
+     
+              <section>
+                  <img src="images/Jeremy Smith-Sebasto.jpeg" width="150" height="180" alt=""><p>Jeremy J. Smith-Sebasto as ‘AL’</p>
+               </section>
+
+               <section>
+                  <img src="images/Harry Dyer.jpg" width="150" height="180" alt="">
+                  <p>Harry Dyer as ‘Max’</p>
+               </section>
+
+              <section>
+                  <img src="images/Heather Gonzalez.jpg" width="150" height="180" alt="">
+                  <p>Heather Gonzalez as ‘Amy’</p>
+              </section>
+
+              <section>
+                  <img src="images/Jef Leeson.jpg" width="150" height="180" alt="">
+                  <p>Jef Leeson as ‘Jerry’</p>
+              </section>
+          
+              <section>
+                  <img src="images/Troy Russell.jpeg" width="150" height="180" alt="">
+                  <p>Score composer by Troy Russell</p>
+              </section>
+
 </div>
 
   
