--- a/p-filmmakerbio.html
+++ b/p-filmmakerbio.html
@@ -7,7 +7,7 @@
 <meta charset="UTF-8">
 
 
-<title>SYNOPSIS</title>
+<title>FILMMEKER&nbsp;BIO</title>
 <link rel="stylesheet" href="CSS/reset.css">
 <!--　lightbox css　--> 
 <link rel="stylesheet" href="CSS/lightbox.css">
@@ -25,7 +25,7 @@
 </head>
 
 <body id="P-synopsis">
- <div class="Psynopsis-page">
+ <div class="Pfilmmakerbio-page">
    
    
    <!-- ハンバーガーメニュー -->
@@ -45,9 +45,9 @@
    
    
 
-   <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;SYNOPSIS</div>
-  <h4 class="subtitle">Synopsis</h4>
-  <p>‘In an escalating battle of two minds, a reclusive programmer is plunged into a terrifying, mind-bending revelation as he becomes exposed to the social engineering of his own sentient supercomputer.’</p>
+   <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;FILMMEKER&nbsp;BIO</div>
+  <h4 class="subtitle">FILMMEKER&nbsp;BIO</h4>
+               <p>'At 18 Ryan was the youngest ever recipient of the BAFTA 60 Seconds of Fame award for his short, stop motion film 'Stick Together'. Since then he has directed for the BBC and also written, directed and animated numerous short films that went on to be selected for a host of international film festivals and won multiple awards.’</p>
 </div>
 
   
