--- a/index.html
+++ b/index.html
@@ -23,14 +23,6 @@
 
   
   
-  
-
-  
-   
-  
- 
-  
-  
 </head>
 
 <body id="home">
@@ -38,7 +30,7 @@
   <div class="page">
   
   
-<!-------------------  header area  ------------------->
+<!--  header area -->
   <header>
    <h1><img src="images/me.png" width="130" alt="me-logo"></h1>
    <h2><img src="images/title.png" width="870" alt="title-logo"></h2>
@@ -75,8 +67,8 @@
          
           <li class="bw"><img src="images/bridgeway logo all white - clean (2).png" width="110" alt=""></li>
           <li class="sc"><img src="images/scfilms.png" alt=""></li>
-          <li class="twit"><img src="images/twit.png" width="30" alt="twitter-logo"></li>
-          <li class="insta"><img src="images/insta.png" width="38" alt="insta-logo"></li>
+          <li class="twit"><a rel="noopener" href="https://twitter.com/ryan_braund" target="_blank" class="aioseop-link"><img src="images/twit.png" width="30" alt="twitter-logo"></a></li>
+          <li class="insta"><a rel="noopener" href="https://www.instagram.com/ryan.braund/" target="_blank" class="aioseop-link"><img src="images/insta.png" width="38" alt="insta"></a></li>
           <p class="copyright"><span>&copy;2021 ABSOLUTE DENIAL.All right reserved</span></p>
           </div>
        </ul>           
@@ -101,8 +93,8 @@
          <div class="responseP-container">        
           <li class="bw"><img src="images/bridgeway logo all white - clean (2).png" width="110" alt=""></li>
           <li class="sc"><img src="images/scfilms.png" alt=""></li>
-          <li class="twit"><img src="images/twit.png" width="30" alt="twitter-logo"></li>
-          <li class="insta"><img src="images/insta.png" width="38" alt="insta-logo"></li>
+          <li class="twit"><a rel="noopener" href="https://twitter.com/ryan_braund" target="_blank" class="aioseop-link"><img src="images/twit.png" width="30" alt=""></a></li>
+          <li class="insta"><a rel="noopener" href="https://www.instagram.com/ryan.braund/" target="_blank" class="aioseop-link"><img src="images/insta.png" width="38" alt="insta"></a></li>
           <p class="copyright"><span>&copy;2021 ABSOLUTE DENIAL.All right reserved</span></p>
           </div>
        </ul>           
@@ -134,8 +126,8 @@
         <div class="midle-container">
           <li class="bw"><img src="images/bridgeway logo all white - clean (2).png" width="110" alt=""></li>
           <li class="sc"><img src="images/scfilms.png" alt=""></li>
-          <li class="twit"><img src="images/twit.png" width="30" alt=""></li>
-          <li class="insta"><img src="images/insta.png" width="38" alt="insta"></li>
+          <li class="twit"><a rel="noopener" href="https://twitter.com/ryan_braund" target="_blank" class="aioseop-link"><img src="images/twit.png" width="30" alt=""></a></li>
+          <li class="insta"><a rel="noopener" href="https://www.instagram.com/ryan.braund/" target="_blank" class="aioseop-link"><img src="images/insta.png" width="38" alt="insta"></a></li>
           <li class="mail"><a class="js-modal-open" href="" data-target="modal05"><i class="far fa-envelope"></i></a></li>  
         </div>
           <li><a class="js-modal-open" href="" data-target="modal03">CAST & CREW</a></li>
