最終チェック１

--- a/p-cast-crew.html
+++ b/p-cast-crew.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <meta charset="UTF-8">
 
@@ -12,7 +11,7 @@
 <!--　lightbox css　--> 
 <link rel="stylesheet" href="CSS/lightbox.css">
 <!--  style css  -->
-<link rel="stylesheet" href="CSS/style-2.css">
+<link rel="stylesheet" href="CSS/style.css">
 <link rel="stylesheet" href="CSS/presponse.css">
 <!--　Font Family　-->
 <link rel="stylesheet" href="https://use.typekit.net/vkt3edn.css"> 
