--- a/p-contact.html
+++ b/p-contact.html
@@ -1,67 +1,60 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <meta charset="UTF-8">
-
-
 <title>CONTACT</title>
 <link rel="stylesheet" href="CSS/reset.css">
-<!--　lightbox css　--> 
+<!--　lightbox css　-->
 <link rel="stylesheet" href="CSS/lightbox.css">
 <!--  style css  -->
-<link rel="stylesheet" href="CSS/style-2.css">
+<link rel="stylesheet" href="CSS/style.css">
 <link rel="stylesheet" href="CSS/presponse.css">
 <!--　Font Family　-->
-<link rel="stylesheet" href="https://use.typekit.net/vkt3edn.css"> 
-<!--　Font Awsome -->
+<link rel="stylesheet" href="https://use.typekit.net/vkt3edn.css">
+<!--　Font Awsome --> 
 <script src="https://kit.fontawesome.com/b49e01865c.js" crossorigin="anonymous"></script>
-  
- <link rel="stylesheet" href="CSS/hamburger-menu.css">
-
-  
+<link rel="stylesheet" href="CSS/hamburger-menu.css">
 </head>
 
 <body id="P-contact">
- <div class="Pcontact-page">
-   
-   
-   <!-- ハンバーガーメニュー -->
-<button class="hamburger-button"></button>
-
-<!-- ナビゲーション -->
-<nav class="hamburger-nav">
-  <ul class="top-Pnav">
-    <li><a href="index.html">HOME</a></li>
-    <li><a href="p-synopis.html">SYNOPSIS</a></li>
-    <li><a href="p-filmmakerbio.html">FILMMAKER BIO</a></li>
-    <li><a href="p-cast-crew.html">CAST&nbsp;&&nbsp;CREW</a></li>
-    <li><a href="p-filmstills.html">FILMSTILLS</a></li>
-    <li><a href="p-contact.html">CONTACT</a></li>
-  </ul>
-</nav>
-   
-   
-
-   <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;CONTACT</div>
+<div class="Pcontact-page"> 
+  
+  <!-- ハンバーガーメニュー -->
+  <button class="hamburger-button"></button>
+  
+  <!-- ナビゲーション -->
+  <nav class="hamburger-nav">
+    <ul class="top-Pnav">
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="p-synopis.html">SYNOPSIS</a></li>
+      <li><a href="p-filmmakerbio.html">FILMMAKER BIO</a></li>
+      <li><a href="p-cast-crew.html">CAST&nbsp;&&nbsp;CREW</a></li>
+      <li><a href="p-filmstills.html">FILMSTILLS</a></li>
+      <li><a href="p-contact.html">CONTACT</a></li>
+    </ul>
+  </nav>
+  <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;CONTACT</div>
   <h4 class="subtitle">CONTACT</h4>
-                   <div class="contact">                   
-                      <form method="post" action="mail.php">  
-                      <label><input type="text" name="name"  placeholder="Enter your name(required)" required="" ></label>
-                      <label><br><input type="email" name="email"  placeholder="Enter your e-mail(required)" required=""></label>
-                      <label><br><textarea name="comment" placeholder="message"></textarea></label>
-                      <input type="submit" value="submit">
-                      </form>
-                   </div>              
+  <div class="contact">
+    <form method="post" action="mail.php">
+      <label>
+        <input type="text" name="name" placeholder="Enter your name(required)" required="" >
+      </label>
+      <label><br>
+        <input type="text" name="Email"  placeholder="Enter your e-mail(required)" required="">
+      </label>
+      <label><br>
+        <textarea name="comment" placeholder="message"></textarea>
+      </label>
+      <input type="submit" value="submit">
+    </form>
   </div>
-  
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/hamburger-menu.js"></script>
-  
-  <script>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+<script src="js/hamburger-menu.js"></script> 
+<script>
   /* オプション設定 */
 const options = {
   slide: 'top', /* スライド方向（none, top, bottom, left, right） */
@@ -70,10 +63,5 @@ const options = {
   dark: true, /* 画面の暗転（true, false） */
 };
   </script>
-   
-   
-
-
-  
 </body>
 </html>
