--- a/p-filmmakerbio.html
+++ b/p-filmmakerbio.html
@@ -1,60 +1,47 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <meta charset="UTF-8">
-
-
 <title>FILMMEKER&nbsp;BIO</title>
 <link rel="stylesheet" href="CSS/reset.css">
-<!--　lightbox css　--> 
+<!--　lightbox css　-->
 <link rel="stylesheet" href="CSS/lightbox.css">
 <!--  style css  -->
-<link rel="stylesheet" href="CSS/style-2.css">
+<link rel="stylesheet" href="CSS/style.css">
 <link rel="stylesheet" href="CSS/presponse.css">
 <!--　Font Family　-->
-<link rel="stylesheet" href="https://use.typekit.net/vkt3edn.css"> 
-<!--　Font Awsome -->
+<link rel="stylesheet" href="https://use.typekit.net/vkt3edn.css">
+<!--　Font Awsome --> 
 <script src="https://kit.fontawesome.com/b49e01865c.js" crossorigin="anonymous"></script>
-  
- <link rel="stylesheet" href="CSS/hamburger-menu.css">
-
-  
+<link rel="stylesheet" href="CSS/hamburger-menu.css">
 </head>
 
 <body id="P-synopsis">
- <div class="Pfilmmakerbio-page">
-   
-   
-   <!-- ハンバーガーメニュー -->
-<button class="hamburger-button"></button>
-
-<!-- ナビゲーション -->
-<nav class="hamburger-nav">
-  <ul class="top-Pnav">
-    <li><a href="index.html">HOME</a></li>
-    <li><a href="p-synopis.html">SYNOPSIS</a></li>
-    <li><a href="p-filmmakerbio.html">FILMMAKER BIO</a></li>
-    <li><a href="p-cast-crew.html">CAST&nbsp;&&nbsp;CREW</a></li>
-    <li><a href="p-filmstills.html">FILMSTILLS</a></li>
-    <li><a href="p-contact.html">CONTACT</a></li>
-  </ul>
-</nav>
-   
-   
-
-   <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;FILMMEKER&nbsp;BIO</div>
+<div class="Pfilmmakerbio-page"> 
+  
+  <!-- ハンバーガーメニュー -->
+  <button class="hamburger-button"></button>
+  
+  <!-- ナビゲーション -->
+  <nav class="hamburger-nav">
+    <ul class="top-Pnav">
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="p-synopis.html">SYNOPSIS</a></li>
+      <li><a href="p-filmmakerbio.html">FILMMAKER BIO</a></li>
+      <li><a href="p-cast-crew.html">CAST&nbsp;&&nbsp;CREW</a></li>
+      <li><a href="p-filmstills.html">FILMSTILLS</a></li>
+      <li><a href="p-contact.html">CONTACT</a></li>
+    </ul>
+  </nav>
+  <div class="bread-cube"><a href="index.html">HOME</a>&nbsp;&lt;&nbsp;FILMMEKER&nbsp;BIO</div>
   <h4 class="subtitle">FILMMEKER&nbsp;BIO</h4>
-               <p>'At 18 Ryan was the youngest ever recipient of the BAFTA 60 Seconds of Fame award for his short, stop motion film 'Stick Together'. Since then he has directed for the BBC and also written, directed and animated numerous short films that went on to be selected for a host of international film festivals and won multiple awards.’</p>
+  <p>'At 18 Ryan was the youngest ever recipient of the BAFTA 60 Seconds of Fame award for his short, stop motion film 'Stick Together'. Since then he has directed for the BBC and also written, directed and animated numerous short films that went on to be selected for a host of international film festivals and won multiple awards.’</p>
 </div>
-
-  
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/hamburger-menu.js"></script>
-  <script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+<script src="js/hamburger-menu.js"></script> 
+<script>
   /* オプション設定 */
 const options = {
   slide: 'top', /* スライド方向（none, top, bottom, left, right） */
@@ -63,6 +50,5 @@ const options = {
   dark: true, /* 画面の暗転（true, false） */
 };
   </script>
-  
 </body>
 </html>
