--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
  <!--  main area  -->
   <main>
-    <div class="imagine-img"><li><img src="images/VAF_awards_2021_BEST_FEATURE_white.png" width="65.1" alt="imagine-logo"></li><li><img src="images/SIFF  laurels .png" width="180" alt="imagine-logo"></li><li><img src="images/imagine.png" width="110" alt="imagine-logo"></li></div>
+    <div class="imagine-img"><li><img src="images/VAF_awards_2021_BEST_FEATURE_white.png" width="65.1" alt="imagine-logo"></li><li><img src="images/macaron_os_featurefilm_white.png" width="128.5" alt=""></li><li><img src="images/SIFF  laurels .png" width="180" alt="imagine-logo"></li><li><img src="images/imagine.png" width="110" alt="imagine-logo"></li></div>
     <div class="quote-img"><img src="images/quote.png" width="240" alt="quote-logo"></div>
   
   
